syntax = "proto3";

package shadow.grpc;

option go_package = "github.com/kihamo/shadow/components/grpc/grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message VersionRequest {}

message VersionResponse {
    string name = 1;
    string version = 2;
    string build = 3;
    google.protobuf.Timestamp build_datetime = 4;
    google.protobuf.Duration uptime = 5;
}

service Grpc {
    rpc Version (VersionRequest) returns (VersionResponse) {}
}

